--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@coreui/react": "^4.11.0",
+    "boxicons": "^2.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.21.0",
