--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "boxicons": "^2.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
+    "react-modal": "^3.16.1",
     "react-router": "^6.21.0",
     "react-router-dom": "^6.21.0",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1"
   },
